adding weeks 3-17; moving data out of html file

--- a/footballpool.html
+++ b/footballpool.html
@@ -13,221 +13,8 @@
         </td>
       </tr>
     </table>
+<script src="schedule.js"></script>
 <script>
-
-var DATA = {
-  "players": ["Al &amp; Bob", "Ali", "B-Mo", "BJ", "Cary", "Charlie", "Chris", "Donna W", "Ed S", "Eric S", "George F", "Gordy", "JP", "Jason", "Jay", "Jim T", "Joe P.", "John M", "John V.", "Laird", "Len", "Linda Mc", "M-J", "MGPC", "Matt", "Mike K", "Mike L", "Mike W.", "Miro", "Nick", "P&amp;G", "Paul", "Peter", "Ray/Chris", "Rich K", "Rick", "Ryan N", "Ryan S.", "Sean", "Sharon", "Tom", "Woody"],
-  "teams": {
-    "Cardinals": {
-      "logo": "5Mh3xcc8uAsxAi3WZvfEyQ",
-      "city": "Arizona",
-      "name": "Cardinals"
-    },
-    "Falcons": {
-      "logo": "QNdwQPxtIRYUhnMBYq-bSA",
-      "city": "Atlanta",
-      "name": "Falcons"
-    },
-    "Ravens": {
-      "logo": "1vlEqqoyb9uTqBYiBeNH-w",
-      "city": "Baltimore",
-      "name": "Ravens"
-    },
-    "Bills": {
-      "logo": "_RMCkIDTISqCPcSoEvRDhg",
-      "city": "Buffalo",
-      "name": "Bills"
-    },
-    "Panthers": {
-      "logo": "4BdHvKq4Iyxsp8WaAbpDuQ",
-      "city": "Carolina",
-      "name": "Panthers"
-    },
-    "Bears": {
-      "logo": "7uaGv3B13mXyBhHcTysHcA",
-      "city": "Chicago",
-      "name": "Bears"
-    },
-    "Bengals": {
-      "logo": "wDDRqMa40nidAOA5883Vmw",
-      "city": "Cincinnati",
-      "name": "Bengals"
-    },
-    "Browns": {
-      "logo": "bTzlW33n9s53DxRzmlZXyg",
-      "city": "Cleveland",
-      "name": "Browns"
-    },
-    "Cowboys": {
-      "logo": "-zeHm0cuBjZXc2HRxRAI0g",
-      "city": "Dallas",
-      "name": "Cowboys"
-    },
-    "Broncos": {
-      "logo": "ZktET_o_WU6Mm1sJzJLZhQ",
-      "city": "Denver",
-      "name": "Broncos"
-    },
-    "Lions": {
-      "logo": "WE1l856fyyHh6eAbbb8hQQ",
-      "city": "Detroit",
-      "name": "Lions"
-    },
-    "Packers": {
-      "logo": "IlA4VGrUHzSVLCOcHsRKgg",
-      "city": "Green Bay",
-      "name": "Packers"
-    },
-    "Texans": {
-      "logo": "sSUn9HRpYLQtEFF2aG9T8Q",
-      "city": "Houston",
-      "name": "Texans"
-    },
-    "Colts": {
-      "logo": "zOE7BhKadEjaSrrFjcnR4w",
-      "city": "Indianapolis",
-      "name": "Colts"
-    },
-    "Jaguars": {
-      "logo": "HLfqVCxzVx5CUDQ07GLeWg",
-      "city": "Jacksonville",
-      "name": "Jaguars"
-    },
-    "Chiefs": {
-      "logo": "5N0l1KbG1BHPyP8_S7SOXg",
-      "city": "Kansas City",
-      "name": "Chiefs"
-    },
-    "Rams": {
-      "logo": "UyYc_V_6Vabrvr7ous98_A",
-      "city": "Los Angeles",
-      "name": "Rams"
-    },
-    "Dolphins": {
-      "logo": "1ysKnl7VwOQO8g94gbjKdQ",
-      "city": "Miami",
-      "name": "Dolphins"
-    },
-    "Vikings": {
-      "logo": "Vmg4u0BSYZ-1Mc-5uyvxHg",
-      "city": "Minnesota",
-      "name": "Vikings"
-    },
-    "Patriots": {
-      "logo": "z89hPEH9DZbpIYmF72gSaw",
-      "city": "New England",
-      "name": "Patriots"
-    },
-    "Saints": {
-      "logo": "AC5-UEeN3V_fjkdFXtHWfQ",
-      "city": "New Orleans",
-      "name": "Saints"
-    },
-    "Giants": {
-      "logo": "q8qdTYh-OWR5uO_QZxFENw",
-      "city": "New York",
-      "name": "Giants"
-    },
-    "Jets": {
-      "logo": "Rb4y9m3hkTcYVmdl10geqw",
-      "city": "New York",
-      "name": "Jets"
-    },
-    "Raiders": {
-      "logo": "QysqoqJQsTbiJl8sPL12Yg",
-      "city": "Oakland",
-      "name": "Raiders"
-    },
-    "Eagles": {
-      "logo": "s4ab0JjXpDOespDSf9Z14Q",
-      "city": "Philadelphia",
-      "name": "Eagles"
-    },
-    "Steelers": {
-      "logo": "mdUFLAswQ4jZ6V7jXqaxig",
-      "city": "Pittsburgh",
-      "name": "Steelers"
-    },
-    "Chargers": {
-      "logo": "tmQHdnwuMcA9n69f5rBr0w",
-      "city": "San Diego",
-      "name": "Chargers"
-    },
-    "49ers": {
-      "logo": "ku3s7M4k5KMagYcFTCie_g",
-      "city": "San Francisco",
-      "name": "49ers"
-    },
-    "Seahawks": {
-      "logo": "iVPY42GLuHmD05DiOvNSVg",
-      "city": "Seattle",
-      "name": "Seahawks"
-    },
-    "Buccaneers": {
-      "logo": "cv5_3oTDQB0gT7l0g2gSGg",
-      "city": "Tampa Bay",
-      "name": "Buccaneers"
-    },
-    "Titans": {
-      "logo": "9J9dhhLeSa3syZ1bWXRjaw",
-      "city": "Tennessee",
-      "name": "Titans"
-    },
-    "Redskins": {
-      "logo": "z_Or7w7bQ_ALmWUNsdd7AQ",
-      "city": "Washington",
-      "name": "Redskins"
-    }
-  },
-  "weeks": [
-    {
-      "week_num": 1,
-      "start": "2017-09-07",
-      "end": "2017-09-11",
-      "games": [
-        ["Chiefs", "Patriots"],
-        ["Jets", "Bills"],
-        ["Jaguars", "Texans"],
-        ["Steelers", "Browns"],
-        ["Cardinals", "Lions"],
-        ["Buccaneers", "Dolphins"],
-        ["Falcons", "Bears"],
-        ["Raiders", "Titans"],
-        ["Ravens", "Bengals"],
-        ["Eagles", "Redskins"],
-        ["Colts", "Rams"],
-        ["Panthers", "49ers"],
-        ["Seahawks", "Packers"],
-        ["Giants", "Cowboys"],
-        ["Saints", "Vikings"],
-        ["Chargers", "Broncos"]
-      ]
-    },
-    {
-      "week_num": 2,
-      "start": "2017-09-14",
-      "end": "2017-09-18",
-      "games": [
-        ["Texans", "Bengals"],
-        ["Bills", "Panthers"],
-        ["Bears", "Buccaneers"],
-        ["Vikings", "Steelers"],
-        ["Cardinals", "Colts"],
-        ["Patriots", "Saints"],
-        ["Browns", "Ravens"],
-        ["Eagles", "Chiefs"],
-        ["Titans", "Jaguars"],
-        ["Jets", "Raiders"],
-        ["Dolphins", "Chargers"],
-        ["Cowboys", "Broncos"],
-        ["49ers", "Seahawks"],
-        ["Redskins", "Rams"],
-        ["Packers", "Falcons"],
-        ["Lions", "Giants"]
-      ]
-    }
-  ]
-};
 
 var STATE = {};
 
