--- a/football-server/footballpool.html
+++ b/football-server/footballpool.html
@@ -61,7 +61,7 @@ function updateCurrentWeekAndPlayer() {
   for (var pickIndex in playerPicks.picks) {
     var teamName = playerPicks.picks[pickIndex];
     var gameIndex = getGameIndex(teamName);
-    onTeamClick(DATA.teams[teamName], gameIndex, true)();
+    moveToPicksTable(gameIndex, DATA.teams[teamName]);
   }
 }
 
@@ -114,12 +114,9 @@ function teamNameCell(team, gameIndex, isBeingPicked) {
 }
 
 function onTeamClick(team, gameIndex, isBeingPicked) {
-  var picks = document.getElementById('picks');
   return function() {
-    var game = document.getElementById('game' + gameIndex);
     if (isBeingPicked) {
-      game.style.display = 'none';
-      picks.appendChild(teamRow(team, gameIndex));
+      moveToPicksTable(gameIndex, team);
       STATE.picks[playerWeekKey()] = STATE.picks[playerWeekKey()] || {
         "player": document.getElementById('player').value,
         "week": getCurrentWeek(),
@@ -132,6 +129,13 @@ function onTeamClick(team, gameIndex, isBeingPicked) {
     }
     return false;
   };
+}
+
+function moveToPicksTable(gameIndex, team) {
+  var picks = document.getElementById('picks');
+  var game = document.getElementById('game' + gameIndex);
+  game.style.display = 'none';
+  picks.appendChild(teamRow(team, gameIndex));
 }
 
 window.onload = function() {
