can now read the picks.json file when page is initialized

--- a/football-server/footballpool.html
+++ b/football-server/footballpool.html
@@ -18,11 +18,8 @@
       </table>
     </form>
 <script src="schedule.js"></script>
+<script src="picks.js"></script>
 <script>
-
-var STATE = {
-  "picks": {}
-};
 
 function getCurrentWeek() {
   return 'Week' + DATA.weeks[document.getElementById('week').value].week_num;
